<resources>
    <string name="company_name">小站教育</string>
    <string name="app_name">小站备考</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="network_disconnect">没有可用网络</string>
    <string name="unknow_error">未知错误</string>
    <string name="finish">完成</string>
    <string name="close">关闭</string>
    <string name="download">下载</string>
    <string name="loading">载入中，请稍后...</string>
    <string name="delete_confirm">确定要删除吗？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="be_sure">确认</string>
    <string name="coming_soon">敬请期待</string>
    <string name="home_page">首页</string>
    <string name="message">消息</string>
    <string name="my">我的</string>
    <string name="submit">提交</string>
    <string name="recording_not_exist">未找到录音文件!</string>
    <string name="unit_day">天</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="home_page_def_en_sentence">Work is the greatest thing in the world, so we should always save some of it for tomorrow.</string>
    <string name="home_page_def_ch_sentence">工作是世界上最棒的事情，所以我们每天都要省下一些明天再做。</string>
    <string name="home_page_def_sentence_author">Don Herold</string>
    <string name="wobeikao">我要备考</string>
    <string name="tpoxunlian">托福、雅思训练营</string>
    <string name="testdata">考试日期 :</string>
    <string name="upto_exam_time">离考试还有 : </string>
    <string name="is_exam_time">考试啦！加油！</string>
    <string name="home_page_setting">设置</string>
    <string name="home_page_test_order">考位预订</string>
    <string name="home_page_abroad_frident">留学交友</string>
    <string name="home_page_happy_eng_everyday">快乐英语每一天</string>
    <string name="home_page_speaking_out">开口说出来</string>
    <string name="home_page_person_eng">名人英语</string>
    <string name="home_page_listen_person_eng">听听名人秀英语</string>
    <string name="home_page_scan_school">纵览各大名校</string>
    <string name="home_page_abord_strategy">留学全攻略</string>
    <string name="home_page_live_money">经历就是财富</string>
    <string name="home_page_meeting">签到领奖学金</string>
    <string name="home_page_signed">已签到</string>
    <string name="home_page_music">音乐调频</string>
    <string name="home_page_music_detaile">音乐调频详情</string>
    <string name="home_page_music_english">听歌学英语</string>
    <string name="login">登录</string>
    <string name="login_success">登录成功!</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功!</string>
    <string name="hint_phone_number">请输入手机号</string>
    <string name="hint_phone_pwd">请输入密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="user_profile">用户信息</string>
    <string name="phone_number_empty">请输入手机号</string>
    <string name="phone_number_invalid">请输入正确的手机号</string>
    <string name="pwd_empty">密码不能为空</string>
    <string name="logining">登录中...</string>
    <string name="processing">获取授权中...</string>
    <string name="registering">注册中...</string>
    <string name="modifying">修改中...</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="input_sms_code">请输入验证码</string>
    <string name="check_sms_code">请确认输入正确的验证码</string>
    <string name="re_get_time_left">%d秒后重试</string>
    <string name="sms_code_msg_verify">注册手机号验证</string>
    <string name="sms_code_msg_change_pwd">修改密码验证</string>
    <string name="phone_number_exists">手机号已注册</string>
    <string name="next_step">下一步</string>
    <string name="input_nickname">请输入您的昵称</string>
    <string name="input_pwd">请输入6-16位密码</string>
    <string name="reinput_pwd">请输重复输入密码</string>
    <string name="pwd_length_error">密码必须为6-16位</string>
    <string name="re_pwd_not_equal">两次输入的密码不相同</string>
    <string name="set_new_pwd_success">设置新密码成功</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="re_input_new_pwd">请再次输入密码</string>
    <string name="submitting">提交中，请稍后...</string>
    <string name="bbs_login">论坛登录</string>
    <string name="hint_user_name">请输入用户名</string>
    <string name="nick_name_too_long">昵称不能超过12个字符</string>
    <string name="modify_phone_success">更换手机号成功</string>
    <string name="binding_phone_success">绑定手机号成功</string>
    <string name="input_nickage">请输入您的年龄</string>
    <string name="title_activity_modify_phone">更换手机号码</string>
    <string name="user_info">个人信息</string>
    <string name="clearing_cache">正在清除缓存，请稍后...</string>
    <string name="clear_cache_finished">已清除%s缓存空间</string>
    <string name="personal_center">个人中心</string>
    <string name="exit_account">退出账号</string>
    <string name="exit_account_success">已退出账号</string>
    <string name="my_speaking">我的口语练习</string>
    <string name="my_practice">我的跟读</string>
    <string name="my_tpo">我的模考</string>
    <string name="my_task">我的任务</string>
    <string name="system">系统</string>
    <string name="my_profile">个人信息</string>
    <string name="about_us">关于我们</string>
    <string name="my_tpo_question">Question:</string>
    <string name="my_tpo_sample">Sample:</string>
    <string name="my_tpo_recording">我的录音</string>
    <string name="my_tpo_view_sample">查看Sample</string>
    <string name="my_tpo_details_title" formatted="false">%s-%s 模考</string>
    <string name="my_tpo_recording_not_exists">录音文件不存在</string>
    <string name="my_speaking_local_recording">本地录音</string>
    <string name="my_speaking_correcting">批改中</string>
    <string name="my_speaking_corrected">已批改</string>
    <string name="my_speaking_answer_record">答题记录</string>
    <string name="my_speaking_view_correct_details">查看详情</string>
    <string name="my_speaking_correct_details">批改详情</string>
    <string name="my_speaking_your_score">Your Score:</string>
    <string name="user_info_head">头像</string>
    <string name="user_info_nickname">昵称</string>
    <string name="user_info_age">年龄</string>
    <string name="user_info_sex">性别</string>
    <string name="user_info_phone_number">手机号码</string>
    <string name="user_info_please_binding_phone">请绑定手机号</string>
    <string name="user_info_binding_phone">绑定手机号</string>
    <string name="user_info_loginpass">登录密码</string>
    <string name="user_info_modify">修改</string>
    <string name="modify_phone_over">完成</string>
    <string name="user_custorm">小站客服</string>
    <string name="weichat_copy">复制</string>
    <string name="statistic_kouyubofang">我的口语练习播放按钮</string>
    <string name="statistic_mypraticebofang">我的跟读播放按钮</string>
    <string name="mytpodetails_bofang">我的模考详情播放按钮</string>
    <string name="my_sholarship">奖学金</string>
    <string name="mysholarship">我的奖学金</string>
    <string name="passwd_currentpass">请输入当前密码</string>
    <string name="passwd_newpass">请输入6-16位新密码</string>
    <string name="passwd_newpassagain">请重复输入新密码</string>
    <string name="toast_modifyok">更改成功</string>
    <string name="toast_copyed">复制成功</string>
    <string name="us_about">关于我们</string>
    <string name="us_link">官方网站: http://www.zhan.com/</string>
    <string name="us_wechat">微信公众号: youkaowei</string>
    <string name="us_index">新功能介绍</string>
    <string name="us_grade">打分鼓励一下</string>
    <string name="us_clear">清除缓存</string>
    <string name="us_error">没有应用市场,请安装市场后重试</string>
    <string name="login_other">第三方账号登陆</string>
    <string name="us_feedback">意见反馈</string>
    <string name="new_version">发现新版本</string>
    <string name="update_now">立即更新</string>
    <string name="MXKActivity">名校库</string>
    <string name="person_center">我的主页</string>
    <string name="person_speaking">口语练习</string>
    <string name="person_answer">精彩回答</string>
    <string name="person_focus">关注</string>
    <string name="person_fans">粉丝</string>
    <string name="person_letter">私信</string>
    <string name="person_spokensquare">去口语广场练习</string>
    <string name="myperson_focus">我的关注</string>
    <string name="person_addfocus">+关注</string>
    <string name="person_addfollowee">加关注</string>
    <string name="person_successfollowee">关注成功！</string>
    <string name="person_failefollowee">关注失败！</string>
    <string name="person_cancelsuccessfollowee">取消关注成功！</string>
    <string name="person_cancelfailefollowee">取消关注失败！</string>
    <string name="person_followeeed">已关注</string>
    <string name="person_otherfollowee">相互关注</string>
    <string name="personcenter_bofang">我的主页播放按钮</string>
    <string name="personcenter_thumbs_up">我的主页点赞</string>
    <string name="personcenter_back">我的主页返回按钮</string>
    <string name="personcenter_spokensquare">我的主页去口语广场按钮</string>
    <string name="personcenter_more">他人个人主页更多按钮</string>
    <string name="personcenter_more_cancelFances">他人个人主页更多中取消关注</string>
    <string name="personcenter_more_addFances">他人个人主页更多种加关注</string>
    <string name="tpo">口语模考</string>
    <string name="tpo_title_subfix">模考</string>
    <string name="tpo_intro">%s 题型介绍</string>
    <string name="tpo_ignore">跳过</string>
    <string name="tpo_puton_headset">Please put on your headset</string>
    <string name="tpo_topic_intro">题型介绍</string>
    <string name="tpo_saving_recording">录音保存中...</string>
    <string name="tpo_exting_tpo">正在退出模考</string>
    <string name="tpo_exit_confirm_msg">答题过程中退出模考，\n您可在\"我的模考\"查看答题记录</string>
    <string name="tpo_exit_confirm">退出模考</string>
    <string name="tpo_exit_cancel">继续答题</string>
    <string name="tpo_remain_time">Reading Time: %d s</string>
    <string name="tpo_re_answer_question">重新答题</string>
    <string name="practice">跟读训练</string>
    <string name="practice_details_title">Question</string>
    <string name="practice_resolving_idea">解题思路</string>
    <string name="practice_diffculty">难点:</string>
    <string name="practice_hint">提示:</string>
    <string name="practice_finish_pre_paragraph">必须先完成前面的段落</string>
    <string name="practice_merge_recording">正在合成录音</string>
    <string name="practice_my_recording">我的录音</string>
    <string name="practice_back_recording">返回重录</string>
    <string name="practice_merge_recording_failed">合成录音失败</string>
    <string name="practice_trans">翻译</string>
    <string name="practice_word_details">单词详情</string>
	<string name="practice_un_found_mean">未找到词义</string>
	<string name="practice_exting">正在退出训练</string>
    <string name="practice_exit_confirm_msg">答题过程中退出，\n您可在\"我的跟读\"查看答题记录</string>
    <string name="speaking_selelct_question">题目选择</string>
    <string name="speaking_answering_classification">答题分类</string>
    <string name="speaking_content_classification">内容分类</string>
    <string name="speaking_all_question">全部</string>
    <string name="speaking_un_answered">未答题</string>
    <string name="speaking_education">Education</string>
    <string name="speaking_leisure_time">Leisure time</string>
    <string name="speaking_advice">Advice</string>
    <string name="speaking_modern_tech">Modern Tech.</string>
    <string name="speaking_object">Object</string>
    <string name="speaking_job">Job</string>
    <string name="speaking_activity">Activity</string>
    <string name="speaking_person">Person</string>
    <string name="speaking_random">Random</string>
    <string name="speaking_life">Life</string>
    <string name="speaking_experience">Experience</string>
	<string name="speaking_place">Place</string>
    <string name="speaking_money">Money</string>
    <string name="speaking_media">Media</string>
    <string name="speaking_skill">Skill</string>
    <string name="speaking_ielts_content_classification">题库分类</string>
    <string name="speaking_ielts_four">剑桥4</string>
    <string name="speaking_ielts_five">剑桥5</string>
    <string name="speaking_ielts_six">剑桥6</string>
    <string name="speaking_ielts_seven">剑桥7</string>
    <string name="speaking_ielts_eight">剑桥8</string>
    <string name="speaking_ielts_nine">剑桥9</string>
    <string name="speaking_ielts_ten">剑桥10</string>
    <string name="feedback_hint">请输入您的宝贵意见，我们收到后会及时答复</string>
    <string name="feedback_qq_prefix">小站备考APP用户反馈QQ群：</string>
    <string name="feedback_qq">419552076</string>
</resources>