<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp">

    <EditText
        android:id="@+id/feedback_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_rounded"
        android:drawablePadding="16dp"
        android:gravity="top"
        android:hint="@string/feedback_hint"
        android:maxLines="20"
        android:minHeight="140dp"
        android:padding="12dp"
        android:textSize="@dimen/text_size_small" />

    <Button
        android:id="@+id/submit"
        style="@style/text_white_btn_style"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_dark_red_rounded"
        android:text="@string/submit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_qq_prefix"
            android:textColor="@color/text_color_content"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_qq"
            android:textColor="@color/dark_red"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>

</LinearLayout>