<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none" >

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="21dp" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:text="@string/speaking_selelct_question"
            android:textColor="@color/dark_red"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/speaking_ielts_content_classification"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp" >

            <Button
                android:id="@+id/btn_all_question"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:background="@drawable/bg_grey_border"
                android:gravity="center"
                android:minHeight="0dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/speaking_all_question"
                android:textColor="@color/text_color_main"
                android:textSize="16sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:background="@drawable/bg_grey_border"
                android:gravity="center"
                android:minHeight="0dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/speaking_ielts_four"
                android:textColor="@color/text_color_main"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp" >

            <Button
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:background="@drawable/bg_grey_border"
                android:gravity="center"
                android:minHeight="0dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/speaking_ielts_five"
                android:textColor="@color/text_color_main"
                android:textSize="16sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:background="@drawable/bg_grey_border"
                android:gravity="center"
                android:minHeight="0dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/speaking_ielts_six"
                android:textColor="@color/text_color_main"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp" >

            <Button
                android:singleLine="true"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:background="@drawable/bg_grey_border"
                android:gravity="center"
                android:minHeight="0dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/speaking_ielts_seven"
                android:textColor="@color/text_color_main"
                android:textSize="16sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:background="@drawable/bg_grey_border"
                android:gravity="center"
                android:minHeight="0dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/speaking_ielts_eight"
                android:textColor="@color/text_color_main"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp" >

            <Button
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:background="@drawable/bg_grey_border"
                android:gravity="center"
                android:minHeight="0dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/speaking_ielts_nine"
                android:textColor="@color/text_color_main"
                android:textSize="16sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:background="@drawable/bg_grey_border"
                android:gravity="center"
                android:minHeight="0dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/speaking_ielts_ten"
                android:textColor="@color/text_color_main"
                android:textSize="16sp" />
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>